# xtreme-api

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
xtremeAPI/: README.md  __main__.py  createXtremeAPI.py  updateXtremeAPI.py
xtremeAPI/config/: configuration.ini.template  customers.csv  mapping.csv  products.csv  resolution.csv  status.csv
xtremeAPI/lib/: authenticate.py  exceptions.py  loadConfig.py  utils.py
